--- a/index.html
+++ b/index.html
@@ -3,34 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main class="container">
+    <img class="product-image-mobile" src="./images/image-product-mobile.jpg" alt="A bottle of perfume">
+    <img class="product-image-desktop" src="./images/image-product-desktop.jpg" alt="A bottle of perfume">
+    <section class="description">
+    <p class="header">PERFUME</p>
+    <h1 class="fraunces bold">Gabrielle Essence Eau De Parfum</h1>
+    <p class="product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.</p>
+    
+    <div class="prices">
+    <p class="product-price-discounted fraunces bold">$149.99</p>
+    <p class="product-price-original">$169.99</p>
+    </div>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <button class="bold"><img class="button-logo" src="./images/icon-cart.svg" alt="Shopping cart icon">Add to Cart</button>
+    </section>
+  </main>
 </body>
 </html>
